# asr-real-time

./: .gitignore  CMakeLists.txt  Dockerfile  store.txt  test.ipynb  tokens.txt  wrapped_rnn.pt
data/dictionary/: tokens.txt
data/lexicon/: isymbols.sym  osymbols.sym
include/decoders/: beam.hpp  beams_map.hpp  ctc_decoder.hpp  greedy_decoder.hpp  lexicon.hpp  lexicon_builder.hpp  lexicon_fst.hpp
include/models/: ngrams_model.hpp  torch_script_model.hpp
include/utils/: fst_glog_safe_log.hpp  my_utils.hpp  ring_buffer.hpp  stream_handler.hpp
src/: CMakeLists.txt  main.cpp  record_live.cpp  test  tmp.cpp  vectorize_sum.cpp  vectorized_mult.cpp
src/decoders/: ctc_decoder.cpp  greedy_decoder.cpp  lexicon.cpp  setup.cpp  test.cpp  test_beam.cpp  test_last_word.cpp
src/models/: ngrams_model.cpp  torch_script_model.cpp
src/utils/: my_utils.cpp  ring_buffer.cpp  stream_handler.cpp  test_sree3.cpp
test/: CMakeLists.txt
test/decoders/: test_greedy_decoder.cpp
test/models/: test_ngrams_model.cpp  test_torch_script_model.cpp
test/utils/: test_stream_handler.cpp
torch_cpp_test/: CMakeLists.txt
torch_cpp_test/include/: greedy_decoder.hpp  my_utils.hpp
torch_cpp_test/src/: cpp_test.cpp  decoders.cpp  exp.cpp  greedy_decoder.cpp  my_utils.cpp  nbl.cpp  ring_buffer.cpp  test  test1.txt
torch_test/: CMakeLists.txt  Makefile  cmake_install.cmake
torch_test/src/: torch_script.cpp
